--- a/HRNUG/HRNUG.csproj
+++ b/HRNUG/HRNUG.csproj
@@ -140,6 +140,7 @@
     <Content Include="Images\GitHub-Mark-32px.png" />
     <Content Include="Images\HRNUG-Logo.png" />
     <Content Include="Images\Infotec-Map.png" />
+    <Content Include="Images\issuetrak_building.png" />
     <Content Include="Images\LinkedIn-Logo.png" />
     <Content Include="Images\Meeting-Pic.jpg" />
     <Content Include="Images\Meetup-Logo.png" />
