Location and sponsor changes.

--- a/HRNUG/HRNUG.csproj
+++ b/HRNUG/HRNUG.csproj
@@ -161,6 +161,7 @@
     <Content Include="Images\Sponsors\OReilly-Logo.jpeg" />
     <Content Include="Images\Sponsors\PFS-Logo.jpg" />
     <Content Include="Images\Sponsors\PluralSight-Logo.png" />
+    <Content Include="Images\Sponsors\SwiftKick-Logo.png" />
     <Content Include="Images\Sponsors\Syncfusion-Logo.jpeg" />
     <Content Include="Images\Sponsors\TEK-Logo.jpg" />
     <Content Include="Images\Sponsors\Telerik-Logo.jpeg" />
